# teensy-polyphony

./: CMakeLists.txt  README.md  library.json  library.properties
.github/workflows/: teensy.yml  ubuntu_x64_cmake.yml
cmake/: install_arduino_library.cmake  teensypolyphony.cmake.in
cmake/toolchains/: teensy41.cmake
examples/launch_ctrl/: CMakeLists.txt  launch_ctrl.ino
examples/loop_ctrl/: CMakeLists.txt  loop_ctrl.ino
examples/polyphony_demo/: CMakeLists.txt  kick_raw.h  piano-studio-octave0_raw.h  piano-studio-octave1_raw.h  piano-studio-octave2_raw.h  polyphony_demo.ino
extras/linux/array/: CMakeLists.txt  array.cpp
extras/linux/sample_launcher/: CMakeLists.txt  opengl.cmake  sample_launcher.cpp
src/: CMakeLists.linux.cmake  CMakeLists.teensy.cmake  CMakeLists.txt  MySampler.h  TeensyAudioSampler.h  TeensyPolyphony.h  abstractdisplay.h  audiovoicepolyphonic.h  loopsampler.cpp  loopsampler.h  loopsamplerenums.h  polyphonic.h  polyphonicsampler.cpp  polyphonicsampler.h  sampleplaymidicontroller.cpp  sampleplaymidicontroller.h  sampleplaymidicontrollerenums.h  sampler.cpp  sampler.h  sdsampleplayernote.h  stringsampler.cpp  stringsampler.h
src/playcontroller/: abstractdisplay.h  extracolors.h  sampleplaymidicontroller.h  sampleplaymidicontrollerenums.h  serialdisplay.h  st7735display.h
test/: CMakeLists.txt  output_test.h  polyphonicfixture.h  test_mysampler.cpp  test_polyphonic.cpp  test_polyphonic_sampler.cpp
