cmake_minimum_required(VERSION 3.5)
project(teensypolyphony)
include(cmake/cmake_declare_and_fetch.cmake.in)

if (NOT DEFINED TEENSY_VERSION)
    set(BUILD_FOR_LINUX 1)
    add_definitions(-DBUILD_FOR_LINUX)
endif()

set(CMAKE_CXX_STANDARD 17)

if (NOT DEFINED BUILD_FOR_LINUX)
    set(CMAKE_EXE_LINKER_FLAGS "--specs=nano.specs" CACHE INTERNAL "")
    DeclareAndFetchNoSource(teensy_cmake_macros            https://github.com/newdigate/teensy-cmake-macros.git main)
    include(${teensy_cmake_macros_SOURCE_DIR}/CMakeLists.include.txt)
    import_arduino_library(cores ${teensy_cores_SOURCE_DIR}/teensy4)

    import_arduino_library_git(SPI https://github.com/PaulStoffregen/SPI.git master "")
    import_arduino_library_git(SdFat https://github.com/PaulStoffregen/SdFat.git master "src" common DigitalIO ExFatLib FatLib FsLib iostream SdCard SpiDriver)
    import_arduino_library_git(SD https://github.com/PaulStoffregen/SD.git Juse_Use_SdFat src)
    import_arduino_library_git(SerialFlash https://github.com/PaulStoffregen/SerialFlash.git master "" util)
    import_arduino_library_git(Wire https://github.com/PaulStoffregen/Wire.git master "" utility)
    import_arduino_library_git(arm_math https://github.com/PaulStoffregen/arm_math.git master src)
    import_arduino_library_git(Audio https://github.com/PaulStoffregen/Audio master "/" utility)
    import_arduino_library_git(MIDI https://github.com/PaulStoffregen/MIDI master src)
    import_arduino_library_git(EEPROM https://github.com/PaulStoffregen/EEPROM master "")
    import_arduino_library_git(USBHost_t36 https://github.com/PaulStoffregen/USBHost_t36 master "/" utility)
    import_arduino_library_git(LittleFS https://github.com/PaulStoffregen/LittleFS main src littlefs)

    import_arduino_library_git(teensy_variable_playback https://github.com/newdigate/teensy-variable-playback master src)
    
    add_subdirectory(src)
    add_subdirectory(examples/polyphony_demo)
    add_subdirectory(examples/launch_ctrl)
    add_subdirectory(examples/loop_ctrl)
else()
    DeclareAndFetch(teensy_x86_stubs            https://github.com/newdigate/teensy-x86-stubs.git main src)
    DeclareAndFetch(teensy_x86_sd_stubs         https://github.com/newdigate/teensy-x86-sd-stubs main src)
    DeclareAndFetch(teensy_audio_x86_stubs      https://github.com/newdigate/teensy-audio-x86-stubs main "src extras/soundio/src")
    DeclareAndFetch(teensy_variable_playback    https://github.com/newdigate/teensy-variable-playback master src)

    add_subdirectory(src)
    add_subdirectory(test)
    add_subdirectory(extras/linux/array)
endif()